--- a/src/index.css
+++ b/src/index.css
@@ -25,14 +25,14 @@ textarea {
   font-size: 8rem;
   line-height: 0.8;
   font-weight: bolder;
-  color: #4a0404;
+  color: #a30e0e;
 }
 
 .sub-title {
   font-size: 1.5rem;
   line-height: 0.8;
   font-weight: bolder;
-  color: #d63333;
+  color: #e74225;
   text-transform: uppercase;
   font-family: "Josefin Sans", sans-serif;
   font-weight: 400;
